--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "@auth0/auth0-spa-js": "^2.1.3",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "express-jwt": "^8.4.1",
+    "firebase-admin": "^12.2.0",
+    "jwks-rsa": "^3.1.0"
   }
 }
