--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@auth0/auth0-spa-js": "^2.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-jwt": "^8.4.1",
     "firebase-admin": "^12.2.0",
-    "jwks-rsa": "^3.1.0"
+    "jwks-rsa": "^3.1.0",
+    "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.24.8",
     "@babel/core": "^7.24.9",
     "@babel/preset-env": "^7.24.8",
+    "@babel/preset-react": "^7.24.7",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0"
   }
